--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@ $color-light: #FFFFF9;
 
 $header-height: 70px;
 $logo-height: 56px;
+$photo-height: 150px;
 $default-padding: 20px;
 $background-opacity: 0.08;
 
